assets/css/about.css
.hero-img{
    background-image: url(./../img/about/hero/Abstract\ Design.webp);
    background-size:cover;
}
.custom-shadow{
    box-shadow: 0 0 25px rgba(38, 38, 38, 10);
}
.glow-card {
  background-image: linear-gradient(140deg, rgba(147, 51, 234, .5) 0%, transparent 20%),
                    linear-gradient(140deg, #111111, #111111); /* الخلفية الأساسية السوداء */
  background-color: #111111;
}
.twitter{
    top: 55%;
}
.twitter img{
    width: 3.2rem;
}
.estatein-team form{
    width: 100%;
}
.estatein-team input{
    outline: none;
    width: 80%;
}
.estatein-team button{
    background-color: #703BF7;
}

